# n8n-node-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  index.js  package-lock.json  package.json  pyproject.toml  server.py  setup-github.sh  setup.py
.github/workflows/: test.yml
examples/: example_usage.md  test.js  test_connection.py
src/n8n_node_mcp_server/: __init__.py  server.py
